--- a/web_app/templates/layout.html
+++ b/web_app/templates/layout.html
@@ -1,3 +1,4 @@
+@@ -0,0 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,6 +13,7 @@
       <ul>
           <li><a href="/about">About</a></li>
           <li><a href="/hello">Hello</a></li>
+          <li><a href="/rps/form">RPS Game</a></li>
       </ul>
     </nav>
     <hr>
